@@ -57,7 +57,7 @@ public class ConsoleErrorDetector {
 	
 	public void close() throws InterruptedException {
 		try (var script = new Script(webDriver)) {
-			script.evaluateFunctionInRealm(script.getAllRealms().getFirst().getRealmId(), String.format("console.log('%s')", LAST_LOG), false, Optional.empty());
+			script.evaluateFunctionInRealm(script.getAllRealms().getFirst().getRealmId(), "console.log('%s')".formatted(LAST_LOG), false, Optional.empty());
 			assertTrue(lastLogReceived.tryAcquire(5, TimeUnit.SECONDS));
 		}
 		logInspector.close();
